src/test/deca/context/invalid/without_class/undefined_var.deca
// Description:
//    Program using an undeclared variable 
//
// Result:
//    UNDEFINED_VAR: Variable \(.\)\+ is undefined
//    line 9
{
    int x = 0;
    x = y; //y is undefined
}